ristiseiska.css
/**
 *------
 * BGA framework: © Gregory Isabelli <gisabelli@boardgamearena.com> & Emmanuel Colin <ecolin@boardgamearena.com>
 * Ristiseiska implementation: © Sami Kalliomäki <sami@kalliomaki.me>
 *
 * This code has been produced on the BGA studio platform for use on http://boardgamearena.com.
 * See http://en.boardgamearena.com/#!doc/Studio for more information.
 * -----
 *
 * ristiseiska.css
 *
 * Ristiseiska stylesheet
 *
 */

/*
    This is the CSS stylesheet of your game User Interface.
    
    Styles defined on this file will be applied to the HTML elements you define in your
    HTML template (ristiseiska_ristiseiska.tpl), and to HTML elements you create dynamically
    (in ristiseiska.js).
    
    Usually, you are using CSS to:
    
    1°) define the overall layout of your game
        (ex: place the board on the top left, place player's hand beside, place the deck on the right, ...).

    2°) create your CSS-sprites:
        All images of your games should be gathered into a small number of image files. Then, using
        background-image and background-position CSS properties, you create HTML blocks that can 
        display these images correctly (see example below).
    
    3°) ... anything else:
        It is really easy to add and remove CSS classes dynamically from your Javascript with
        dojo.addClass and dojo.removeClass. It is also easy to check if an element has a class
        (dojo.hasClass) or to get all elements with a specific class (dojo.query). This is why,
        very often, using CSS classes for the logic of your user interface allow you to do complex
        thing easily.
        
        
     Note: on the production platform, this file will be compressed and comments will be removed.
           Consequently, don't hesitate to put as many comments as necessary.
*/


/* Note: you must not use any @import directive */


/********* You can start writing your CSS below this line: **********/

.playertablecard {
    display: inline-block;
    position: relative;
    margin-top: 5px;
    width: 72px;
    height: 96px;
}

.relative_parent {
    position: relative;
}

.token_zone {
    width: 32px;
    min-height: 32px;
}

#token_park {
    position: absolute;
    top: 16px;
    right: 16px;
}

#penalty_token {
    background-repeat: no-repeat;
    width: 32px;
    height: 32px;
    background-image: url('img/penalty.png'); 
    background-size: cover;
    z-index: 100;
}

.inline_card_row_container {
    display: inline-block;
}

.inline_card_row {
    display: inline-block;
}

.bottom_row > .inline_card_row {
    float: right;
}

/*** cards on table ***/

.unplayable::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.2);
}

.suit_1, .suit_3 {
    color: black;
}

.suit_2, .suit_4 {
    color: red;
}

